<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Meditation\ngood for you"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:layout_centerHorizontal="true"
                    android:text="Register your account"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="italic" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_below="@id/textView2"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/logo" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/white_background"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editTextTextPersonName5"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/person"
                        android:drawablePadding="10dp"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingStart="15dp"
                        android:textColorHint="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="15dp"
                        android:textColorHint="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/pass"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:textColorHint="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/pass"
                        android:drawablePadding="10dp"
                        android:hint="@string/re_password"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:textColorHint="#000000" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/btn_dark"
                        android:text="Register"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/forget_pass"
                        android:textSize="18sp" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
