<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="720dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:text="Meditation\ngood for you"
                    android:textColor="#ffffff"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login to relax"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:srcCompat="@drawable/logo" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/white_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <EditText
                        android:id="@+id/editTextTextPersonName5"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/pass"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/username"
                        android:inputType="textPersonName"
                        android:paddingStart="15dp"
                        android:textColorHint="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/pass"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textPersonName"
                        android:paddingStart="15dp"
                        android:textColorHint="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/person"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:textColorHint="#000000" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/white_background_edittext"
                        android:drawableStart="@drawable/pass"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/re_password"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:textColorHint="#000000" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"

                        android:layout_margin="10dp"
                        android:background="@drawable/btn_dark"
                        android:text="Login"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/text_signup"
                        android:textSize="18sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>